# MCPwnetix

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
docs/: tool-inventory.md
src/acunetix_mcp/: __main__.py  client.py  config.py  errors.py  http_server.py  inventory.py  logging_utils.py  mcp_server.py  schema.py  spec_loader.py  spec_snapshot.py
